css externally added

--- a/index.html
+++ b/index.html
@@ -12,161 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <style>
-        .nav-li li:hover {
-            background-color: rgb(41, 41, 41);
-            padding: 0px 8px;
-            color: whitesmoke;
-            border-radius: 5px;
-            transition: all ease-in-out .3s;
-        }
-
-        .navigation {
-            width: 100%;
-            height: 100vh;
-            background-image: url('img/bg1.jpg');
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-attachment: fixed;
-        }
-
-        .navigation p {
-            font-size: 2.5rem;
-            letter-spacing: 7px;
-        }
-
-        .section-3 {
-            width: 88%;
-            margin-top: 60px;
-            font-size: 13.2px;
-            line-height: 25px;
-            letter-spacing: .8px;
-        }
-
-        .para {
-            font-size: 13.2px;
-            line-height: 25px;
-            letter-spacing: .8px;
-        }
-
-        .explore-btn {
-            border: none;
-            background-color: #d7ef4d;
-            font-size: small;
-        }
-
-        .explore-btn:hover {
-            background-color: #bbd141;
-            transition: all ease-in-out .3s;
-        }
-
-        .client-pic {
-            width: 35%;
-        }
-
-        .client-desc {
-            width: 65%;
-        }
-
-        nav {
-            background-color: #d7ef4d;
-        }
-
-        .f-li-head {
-            text-decoration: underline;
-            text-underline-offset: 4px;
-            letter-spacing: 1px;
-        }
-
-        .footer1 li {
-            cursor: pointer;
-        }
-
-        .footer1 li:hover {
-            color: rgb(220, 213, 213);
-            transition: all ease-in-out .3s;
-        }
-
-        .footer1 h5,
-        .last-para {
-            color: black;
-        }
-
-        .footer1 h5:hover,
-        .last-para:hover {
-            color: rgb(111, 102, 102);
-            transition: all ease-in-out .3s;
-            cursor: pointer;
-        }
-
-        .icons div {
-            height: 0px;
-            padding: 18px 12px;
-            margin: 0px 2px;
-            border-radius: 50%;
-            color: #d7ef4d;
-        }
-
-        .icon {
-            background-color: black;
-            cursor: pointer;
-        }
-
-        .icon:hover {
-            background-color: black !important;
-        }
-
-        @media screen and (max-width:768px) and (min-width:0px) {
-            .nav-li {
-                margin-top: -400px;
-                background-color: #b2d235;
-
-            }
-
-            .logo {
-                background-color: #b2d235;
-                color: #0e0707;
-            }
-
-            .navigation p {
-                font-size: 24px;
-                /* font-size: 1.5rem; */
-
-            }
-
-            nav {
-                position: fixed;
-                top: .1px;
-                background-color: #b2d235;
-
-            }
-
-            .client-pic {
-                width: 80%;
-            }
-
-            .client-desc {
-                width: 90%;
-            }
-
-            .footer-pic {
-                width: 70%;
-                margin: 0px auto;
-            }
-
-            .footer1 {
-                padding-left: 30px;
-            }
-
-            .icons div {
-                padding: 13px 7px;
-            }
-
-            .l-para {
-                font-size: small;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
