--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Assistance Program (EAP) provider - Silver Oak Health </title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/x-icon"
         href="https://images.squarespace-cdn.com/content/v1/5a89e378f09ca4212d987f8c/1522647448510-S5LV9SY78NPI8LE3AKN4/favicon.ico?format=100w" />
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
